--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1206,8 +1206,8 @@
 %   involves constructing the translation macros.
 %    \begin{macrocode}
 \newcommand*\FXRegisterEnvLayout[3]{%
-  \expandafter\let\csname @fx@envlayout@#1@begin\endcsname#2%
-  \expandafter\let\csname @fx@envlayout@#1@end\endcsname#3}
+  \expandafter\let\csname @fxenvlayout@#1@begin\endcsname#2%
+  \expandafter\let\csname @fxenvlayout@#1@end\endcsname#3}
 
 %    \end{macrocode}
 % \end{macro}
@@ -1230,18 +1230,18 @@
 %
 % \subsubsection{Environment layout control}
 % \begin{option}{envlayout}
-%   \begin{macro}{\@fx@envlayout@begin}
-%     \begin{macro}{\@fx@envlayout@end}
+%   \begin{macro}{\@fxenvlayout@begin}
+%     \begin{macro}{\@fxenvlayout@end}
 %       This is much simpler than standard layout management because only one
 %       environment layout at a time is possible. Using a specific environment
 %       layout boils down to binding the beginning and ending macros to the
 %       proper translation ones.
 %    \begin{macrocode}
 \@fxdefinekey{envlayout}{envlayout}{%
-  \expandafter\let\expandafter\@fx@envlayout@begin%
-    \csname @fx@envlayout@#1@begin\endcsname%
-  \expandafter\let\expandafter\@fx@envlayout@end%
-    \csname @fx@envlayout@#1@end\endcsname}
+  \expandafter\let\expandafter\@fxenvlayout@begin%
+    \csname @fxenvlayout@#1@begin\endcsname%
+  \expandafter\let\expandafter\@fxenvlayout@end%
+    \csname @fxenvlayout@#1@end\endcsname}
 
 %    \end{macrocode}
 %     \end{macro}
@@ -1601,9 +1601,10 @@
 % A \fixme environment's summary is laid out by the corresponding macro, but
 % the \texttt{inline} layout is disabled. This is as easy as appending
 % \texttt{noinline} to the end of the options list, which is not even worth
-% doing in final mode, since all layout is disabled then.\par
+% doing in final mode, since all layouts are disabled then.\par
 % As far as the environment's body is concerned, \texttt{verbatim}'s
-% \texttt{comment} environment is used to suppress output.\par
+% \texttt{comment} environment is used to suppress output in \texttt{final}
+% mode.\par
 % Note that contrary to the macro version, we don't need to define the
 % \texttt{fxfatal} environment in a specialized way because the fatal error
 % will be triggered by the call to \cs{fxfatal} anyway.\par
@@ -1627,7 +1628,7 @@
   \begingroup%
     \@fxsetkeys{ltx,lang,lox,log,layout,envlayout}{#2,noinline}%
     \@nameuse{fx#1}{#3}%
-    \@fx@envlayout@begin{#1}{\fixmelogo}}
+    \@fxenvlayout@begin{#1}{\fixmelogo}}
 
 %    \end{macrocode}
 %   \end{macro}
@@ -1640,14 +1641,15 @@
 %    \begin{macrocode}
 \newcommand\@fxsenvbegin@final[4]{%
   \begingroup%
-    \@fxsetkeys{ltx,lang,lox,log,layout,envlayout}{#2}%
+    \@fxsetkeys{ltx,lang,lox,log,layout,contentslayout,envlayout}{#2}%
     \@nameuse{fx#1}*{#3}{#4}%
     \comment}
 \newcommand\@fxsenvbegin@draft[4]{%
   \begingroup%
-    \@fxsetkeys{ltx,lang,lox,log,layout,envlayout}{#2,noinline}%
+    \@fxsetkeys{ltx,lang,lox,log,layout,contentslayout,envlayout}{%
+      #2,noinline}%
     \@nameuse{fx#1}*{#3}{#4}%
-    \@fx@envlayout@begin{#1}{\fixmelogo}}
+    \@fxenvlayout@begin{#1}{\fixmelogo}}
 
 %    \end{macrocode}
 %   \end{macro}
@@ -1660,7 +1662,7 @@
 %     Note that closing in standard or starred versions is identical.
 %    \begin{macrocode}
 \newcommand*\@fxenvend@final[1]{\endcomment\endgroup}
-\newcommand*\@fxenvend@draft[1]{\@fx@envlayout@end{#1}{\fixmelogo}\endgroup}
+\newcommand*\@fxenvend@draft[1]{\@fxenvlayout@end{#1}{\fixmelogo}\endgroup}
 
 %    \end{macrocode}
 %   \end{macro}
