--- a/fixme.dtx
+++ b/fixme.dtx
@@ -740,15 +740,24 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \subsection{List macros}
+% \subsection{Miscellaneous}
 % \begin{option}{area}
 %   A \fixme note's ``area'' may replace the page number in the list of
 %   fixmes or in the index (see sections \sectionref{sec:code:contentsline}
 %   and \sectionref{sec:code:contentslinelayout}).
 %    \begin{macrocode}
-\@fxdefinecmdkey{lox}{area}{}
+\@fxdefinecmdkey{misc}{area}{}
 %    \end{macrocode}
 % \end{option}
+% \begin{option}{author}
+%   A \fixme note's ``author'' allows to distinguish notes from different
+%   persons in collaborative mode.
+%    \begin{macrocode}
+\@fxdefinecmdkey{misc}{author}{}
+%    \end{macrocode}
+% \end{option}
+%
+% \subsection{List macros}
 % \subsubsection{Contents lines\label{sec:code:contentsline}}
 % \begin{macro}{\l@fixme}
 %   We use the same layout as for the list of figures.
@@ -808,9 +817,9 @@
 %   documented in the user manual.
 %    \begin{macrocode}
 \newcommand*\fxaddcontentsline[1]{%
-  \ifthenelse{\equal{\cmdfx@lox@area}{thepage}}{%
+  \ifthenelse{\equal{\cmdfx@misc@area}{thepage}}{%
     \addcontentsline{lox}{fixme}{#1}}{%
-    \addtocontents{lox}{\protect\fxcontentsline{#1}{\cmdfx@lox@area}}}}
+    \addtocontents{lox}{\protect\fxcontentsline{#1}{\cmdfx@misc@area}}}}
 
 %    \end{macrocode}
 % \end{macro}
@@ -1113,9 +1122,9 @@
 %   number, just as in the list of fixmes.
 %    \begin{macrocode}
 \def\@wrindex#1{%
-  \ifthenelse{\equal{\cmdfx@lox@area}{thepage}}{%
+  \ifthenelse{\equal{\cmdfx@misc@area}{thepage}}{%
     \protected@write\@indexfile{}{\string\indexentry{#1}{\thepage}}}{%
-    \protected@write\@indexfile{}{\string\indexentry{#1}{\cmdfx@lox@area}}}
+    \protected@write\@indexfile{}{\string\indexentry{#1}{\cmdfx@misc@area}}}
   \endgroup
   \@esphack}
 %    \end{macrocode}
@@ -1443,7 +1452,7 @@
   \@fxhandleinnermode%
   \@for\@fxlt:=\@fxlayouts\do{%
     \@nameuse{iffx@layout@\@fxlt}%
-      \@nameuse{@fxlayout@\@fxlt}{#1}{#2}{\fixmelogo}%
+      \@nameuse{@fxlayout@\@fxlt}{#1}{#2}{\cmdfx@misc@author}%
     \fi}}
 
 %    \end{macrocode}
@@ -1459,7 +1468,7 @@
 %     \marg{type}\marg{note}
 %    \begin{macrocode}
 \newcommand*\@@fxnote@final[2]{%
-  \FXLayoutContentsLine{#1}{#2}{\fixmelogo}%
+  \FXLayoutContentsLine{#1}{#2}{\cmdfx@misc@author}%
   \iffx@log@silent\else\@nameuse{@fxlog@#1}{#2}\fi}
 \newcommand*\@@fxnote@draft[2]{%
   \@fxlayout{#1}{#2}%
@@ -1473,7 +1482,7 @@
 %    \begin{macrocode}
 \def\@fxnote#1[#2]#3{%
   \begingroup%
-    \@fxsetkeys{ltx,lang,lox,log,layout}{#2}%
+    \@fxsetkeys{ltx,lang,misc,log,layout}{#2}%
     \stepcounter{fixmecount}%
     \stepcounter{fx#1count}%
     \@@fxnote{#1}{#3}%
@@ -1492,7 +1501,7 @@
 %    \begin{macrocode}
 \long\def\@fxsnote#1[#2]#3#4{%
   \begingroup%
-    \@fxsetkeys{ltx,lang,lox,log,layout,contentslayout}{#2}%
+    \@fxsetkeys{ltx,lang,misc,log,layout,contentslayout}{#2}%
     \@fxcontentslayout{#4}\@fxnote{#1}[]{#3}%
   \endgroup}
 
@@ -1553,7 +1562,7 @@
     and rerun LaTeX.}}
 \newcommand*\@@fxfatal@draft[1]{%
   \@fxlayout{fatal}{#1}%
-  \FXLayoutContentsLine{fatal}{#1}{\fixmelogo}%
+  \FXLayoutContentsLine{fatal}{#1}{\cmdfx@misc@author}%
   \iffx@log@silent\else\FXLogFatal{#1}\fi}
 
 %    \end{macrocode}
@@ -1564,7 +1573,7 @@
 %    \begin{macrocode}
 \newcommand*\@fxfatal[2][]{%
   \begingroup%
-    \@fxsetkeys{ltx,lang,lox,log,layout}{#1}%
+    \@fxsetkeys{ltx,lang,misc,log,layout}{#1}%
     \stepcounter{fixmecount}%
     \stepcounter{fxfatalcount}%
     \@@fxfatal{#2}%
@@ -1583,7 +1592,7 @@
 %    \begin{macrocode}
 \newcommand\@fxsfatal[3][]{%
   \begingroup%
-    \@fxsetkeys{ltx,lang,lox,log,layout,contentslayout}{#1}%
+    \@fxsetkeys{ltx,lang,misc,log,layout,contentslayout}{#1}%
     \@fxcontentslayout{#3}\@fxfatal{#2}%
   \endgroup}
 
@@ -1643,14 +1652,14 @@
 %    \begin{macrocode}
 \newcommand*\@fxenvbegin@final[3]{%
   \begingroup%
-    \@fxsetkeys{ltx,lang,lox,log,layout,envlayout}{#2}%
+    \@fxsetkeys{ltx,lang,misc,log,layout,envlayout}{#2}%
     \@nameuse{fx#1}{#3}%
     \comment}
 \newcommand*\@fxenvbegin@draft[3]{%
   \begingroup%
-    \@fxsetkeys{ltx,lang,lox,log,layout,envlayout}{#2,noinline}%
+    \@fxsetkeys{ltx,lang,misc,log,layout,envlayout}{#2,noinline}%
     \@nameuse{fx#1}{#3}%
-    \@fxenvlayout@begin{#1}{\fixmelogo}}
+    \@fxenvlayout@begin{#1}{\cmdfx@misc@author}}
 
 %    \end{macrocode}
 %   \end{macro}
@@ -1663,15 +1672,15 @@
 %    \begin{macrocode}
 \newcommand\@fxsenvbegin@final[4]{%
   \begingroup%
-    \@fxsetkeys{ltx,lang,lox,log,layout,contentslayout,envlayout}{#2}%
+    \@fxsetkeys{ltx,lang,misc,log,layout,contentslayout,envlayout}{#2}%
     \@nameuse{fx#1}*{#3}{#4}%
     \comment}
 \newcommand\@fxsenvbegin@draft[4]{%
   \begingroup%
-    \@fxsetkeys{ltx,lang,lox,log,layout,contentslayout,envlayout}{%
+    \@fxsetkeys{ltx,lang,misc,log,layout,contentslayout,envlayout}{%
       #2,noinline}%
     \@nameuse{fx#1}*{#3}{#4}%
-    \@fxenvlayout@begin{#1}{\fixmelogo}}
+    \@fxenvlayout@begin{#1}{\cmdfx@misc@author}}
 
 %    \end{macrocode}
 %   \end{macro}
@@ -1683,8 +1692,10 @@
 %     \marg{type}\\
 %     Note that closing in standard or starred versions is identical.
 %    \begin{macrocode}
-\newcommand*\@fxenvend@final[1]{\endcomment\endgroup}
-\newcommand*\@fxenvend@draft[1]{\@fxenvlayout@end{#1}{\fixmelogo}\endgroup}
+\newcommand*\@fxenvend@final[1]{%
+  \endcomment\endgroup}
+\newcommand*\@fxenvend@draft[1]{%
+  \@fxenvlayout@end{#1}{\cmdfx@misc@author}\endgroup}
 
 %    \end{macrocode}
 %   \end{macro}
@@ -1954,16 +1965,17 @@
 % First, we execute some options to initialize \fixme to something sensible,
 % and then we process the user ones.
 %    \begin{macrocode}
-\ExecuteOptionsX[fx]<ltx,lang,lox,log,layout,contentslayout,envlayout>{%
+\ExecuteOptionsX[fx]<ltx,lang,misc,log,layout,contentslayout,envlayout>{%
   final,%
   english,%
   nosilent,%
   area=thepage,%
+  author=\fixmelogo,%
   layout=margin,%
   innerlayout={layout=inline},%
   contentslayout=italics,%
   envlayout=quotation}
-\ProcessOptionsX*[fx]<ltx,lang,lox,log,layout,contentslayout,envlayout>
+\ProcessOptionsX*[fx]<ltx,lang,misc,log,layout,contentslayout,envlayout>
 
 %    \end{macrocode}
 %
@@ -1974,7 +1986,7 @@
 %   with the \texttt{xkeyval} package\ldots
 %    \begin{macrocode}
 \newcommand*\fxsetup[1]{%
-  \@fxsetkeys{ltx,lang,lox,log,layout,contentslayout,envlayout}{#1}}
+  \@fxsetkeys{ltx,lang,misc,log,layout,contentslayout,envlayout}{#1}}
 
 %    \end{macrocode}
 % \end{macro}
