--- a/fixme.dtx
+++ b/fixme.dtx
@@ -564,8 +564,10 @@
 %
 % \section{History}
 % \begin{itemize}
-% \item[v4.0] New feature: floating notes (not specific to any portion of
-%   text), suggested by Rasmus Villemoes.\\
+% \item[v4.0] New feature: targeted notes and environments (highlighting a
+%   portion of text), suggested by Mark Edgington.\\
+%   New feature: floating notes (not specific to any portion of text),
+%   suggested by Rasmus Villemoes.\\
 %   New feature: alternate layout autoswitch for inner mode, suggested by Will
 %   Robertson.\\
 %   New feature: key/value argument syntax in the whole user interface.\\
