--- a/fixme.dtx
+++ b/fixme.dtx
@@ -684,10 +684,9 @@
 %    \end{macrocode}
 % \end{macro}
 % \begin{macro}{\@fxpresetkeys}
-%   \marg{families}\marg{head keys}\marg{tail keys}\\
-%   Note: currently unused.
+%   \marg{families}\marg{head keys}\marg{tail keys}
 %    \begin{macrocode}
-%% \newcommand\@fxpresetkeys{\presetkeys[fx]}
+\newcommand\@fxpresetkeys{\presetkeys[fx]}
 %    \end{macrocode}
 % \end{macro}
 % \begin{macro}{\@fxvoidkeyerror}
@@ -1504,16 +1503,17 @@
 %
 % \subsubsubsection{User-level interface}
 % \begin{macro}{\@fxnewnonfatal}
-%   \marg{type}\\
-%   This command defines user-level non fatal notes in a generic way:
+%   \marg{prefix}\marg{type}\marg{author}\\
+%   This macro defines user-level non fatal notes in a generic way:
 %    \begin{macrocode}
-\newcommand*\@fxnewnonfatal[1]{%
-  \expandafter\DeclareRobustCommand\csname fx#1\endcsname{%
+\newcommand*\@fxnewnonfatal[3]{%
+  \expandafter\DeclareRobustCommand\csname #1#2\endcsname{%
+    \@fxpresetkeys{misc}{author=#3}{}%
     \@ifstar{%
       \@ifnextchar[%]
-      {\@fxsnote{#1}}{\@fxsnote{#1}[]}}{%
+      {\@fxsnote{#2}}{\@fxsnote{#2}[]}}{%
       \@ifnextchar[%]
-      {\@fxnote{#1}}{\@fxnote{#1}[]}}}}
+      {\@fxnote{#2}}{\@fxnote{#2}[]}}}}
 %    \end{macrocode}
 % \end{macro}
 % \begin{macro}{\fxnote}
@@ -1526,9 +1526,9 @@
 %             versions)\\
 %             And we use it to create the user-level interface:
 %    \begin{macrocode}
-\@fxnewnonfatal{note}
-\@fxnewnonfatal{warning}
-\@fxnewnonfatal{error}
+\@fxnewnonfatal{fx}{note}{}
+\@fxnewnonfatal{fx}{warning}{}
+\@fxnewnonfatal{fx}{error}{}
 
 %    \end{macrocode}
 %           \end{macro}
@@ -1594,17 +1594,27 @@
 % \end{macro}
 %
 % \subsubsubsection{User-level interface}
+% \begin{macro}{\@fxnewfatal}
+%   \marg{prefix}\marg{author}\\
+%   This macro defines user-level fatal notes in a generic way:
+%    \begin{macrocode}
+\newcommand*\@fxnewfatal[2]{%
+  \expandafter\DeclareRobustCommand\csname #1fatal\endcsname{%
+    \@fxpresetkeys{misc}{author=#2}{}%
+    \@ifstar{%
+      \@ifnextchar[%]
+      {\@fxsfatal}{\@fxsfatal[]}}{%
+      \@ifnextchar[%]
+      {\@fxfatal}{\@fxfatal[]}}}}
+
+%    \end{macrocode}
+% \end{macro}
 % \begin{macro}{\fxfatal}
 %   \begin{macro}{\fxfatal*}
-%     \oarg{options}\marg{note}(\marg{text} for the starred version)
+%     \oarg{options}\marg{note}(\marg{text} for the starred version)\\
+%     And we use it to create the user-level interface:
 %    \begin{macrocode}
-\DeclareRobustCommand\fxfatal{%
-  \@ifstar{%
-    \@ifnextchar[%]
-    {\@fxsfatal}{\@fxsfatal[]}}{%
-    \@ifnextchar[%]
-    {\@fxfatal}{\@fxfatal[]}}}
-
+\@fxnewfatal{fx}{}
 %    \end{macrocode}
 %   \end{macro}
 % \end{macro}
@@ -1697,16 +1707,18 @@
 %
 % \subsubsection{User-level interface}
 % \begin{macro}{\@fxnewenvironments}
-%   \marg{type}\\
+%   \marg{prefix}\marg{type}\marg{author}\\
 %   This command defines \fixme environments in a generic way:
 %    \begin{macrocode}
-\newcommand*\@fxnewenvironments[1]{%
-  \newenvironment{anfx#1}[2][]{%
-    \@fxenvbegin{#1}{##1}{##2}}{%
-    \@fxenvend{#1}}
-  \newenvironment{anfx#1*}[3][]{%
-    \@fxsenvbegin{#1}{##1}{##2}{##3}}{%
-    \@fxenvend{#1}}}
+\newcommand*\@fxnewenvironments[3]{%
+  \newenvironment{#1#2}[2][]{%
+    \@fxpresetkeys{misc}{author=#3}{}%
+    \@fxenvbegin{#2}{##1}{##2}}{%
+    \@fxenvend{#2}}
+  \newenvironment{#1#2*}[3][]{%
+    \@fxpresetkeys{misc}{author=#3}{}%
+    \@fxsenvbegin{#2}{##1}{##2}{##3}}{%
+    \@fxenvend{#2}}}
 
 %    \end{macrocode}
 % \end{macro}
@@ -1720,10 +1732,10 @@
 %               \begin{environment}{anfxfatal*}
 %                 And we use it to create the user level interface:
 %    \begin{macrocode}
-\@fxnewenvironments{note}
-\@fxnewenvironments{warning}
-\@fxnewenvironments{error}
-\@fxnewenvironments{fatal}
+\@fxnewenvironments{anfx}{note}{}
+\@fxnewenvironments{anfx}{warning}{}
+\@fxnewenvironments{anfx}{error}{}
+\@fxnewenvironments{anfx}{fatal}{}
 
 %    \end{macrocode}
 %               \end{environment}
